fix: images not showing in production
move assets folder to public and then reference to these files accordingly. Solution by ChatGPT

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'bpg_arial_2009';
-  src: url('src/assets/fonts/bpg_arial_2009.ttf');
+  src: url('/assets/fonts/bpg_arial_2009.ttf');
 }
 
 @layer utilities {
